[tool.poetry]
name = "clyjin"
version = "0.2.12"
description = "Core for building plugins with CLI interfaces"
repository = "https://github.com/ryzhovalex/clyjin"
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
keywords = [
    "toolbox", "cli", "plugin", "custom"
]
license = "MIT"
readme = "README.md"
include = [
    "**/.version"
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"
loguru = "^0.7.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
antievil = "^0.1.4"
aiofiles = "^23.2.1"

[tool.poetry.scripts]
clyjin = "clyjin.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"
coverage = "^7.2.7"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
